--- a/site/html/html-eg1.html
+++ b/site/html/html-eg1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="../build/build-eg1.js"></script>
+    <script src="http://localhost:8080/site/build/build-eg1.js"></script>
 </head>
 <body>
     
