--- a/site/html/html-eg1.html
+++ b/site/html/html-eg1.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="http://localhost:8080/site/build/build-eg1.js"></script>
+    <script src="../../site/build/build-eg1.js"></script>
 </head>
 <body>
-    
+    <h1>说明</h1>
+    <p>基础框架搭建，webpack打包，webpack-dev-server开启</p>
 </body>
 </html>
